--- a/Register.html
+++ b/Register.html
@@ -141,12 +141,12 @@
                         </div>
                          <div class="form-group">
                              <label>Password</label>
-                                <input type="password" class="email-bt" placeholder="Password" name="Name" id="pswd">
+                                <input type="password" class="email-bt" placeholder="Password" name="Name" id="pswd" required>
                                 <span id="message" style="color: black;font-size: 20px;"></span>
                               </div>
                               <div class="form-group">
                                   <label>Phone Number</label>
-                          <input type="text" class="email-bt" placeholder="01234567890" name="Email" pattern="01+[0-9]{9}">
+                          <input type="text" class="email-bt" placeholder="01234567890" name="Email" pattern="01+[0-9]{9}" required>
                         </div>
                         <div class="form-group">
                             <label>Address</label>
